...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        navigationItem.title = "Contact"
        navigationItem.rightBarButtonItem = UIBarButtonItem.init(barButtonSystemItem: .add, target: self, action: #selector(addContact))
        navigationItem.leftBarButtonItem = UIBarButtonItem.init(title: "Groups", style: .plain, target: self, action: #selector(groupAction))
        super.loadData()
    }
    
    func configureDependencies() {
        let contactListPresenter = GKContactListPresenter()
        contactListPresenter.contactListViewProtocol = self
...
