...
        textField.textColor = UIColor.navigationTitleColor(a: 1.0)
        textField.isUserInteractionEnabled = false
        return textField
    }()

    let messageButton = GKContactDetailCell.buttonForTitle("message", imageName: "message_button", tag: .messageButtonTag)
    let cameraButton = GKContactDetailCell.buttonForTitle("camera", imageName: "camera_button", tag: .cameraButtonTag)
    let callButton = GKContactDetailCell.buttonForTitle("call", imageName: "call_button", tag: .callButtonTag)
    let emailButton = GKContactDetailCell.buttonForTitle("email", imageName: "email_button", tag: .emailButtonTag)
    let favouriteButton = GKContactDetailCell.buttonForTitle("favourite", imageName: "favourite_button", tag: .favouriteButtonTag)
    
    static func buttonForTitle(_ title: String, imageName: String, tag: ButtonTag) -> UIButton {
        let button = UIButton()
...
